survox/survox-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: survox-back
spec:
  replicas: 3
  selector:
    matchLabels:
      app: survox-back
  template:
    metadata:
      labels:
        app: survox-back
    spec:
      containers:
      - name: survox-back
        image: survox6-back:6.26.3
        imagePullPolicy : Never
        resources:
          limits:
            memory: "512M"
            cpu: "500m"
        ports:
        - containerPort: 8080
        # livenessProbe:
        #   httpGet:
        #     path: /live
        #     port: 80
        #   initialDelaySeconds: 60
        #   periodSeconds: 15
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: 80
        #   initialDelaySeconds: 60
        #   periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: survox-backend-service
spec:
  selector:
    app: survox-back
  ports:
  - port: 8080
    targetPort: 8080
    #nodePort: 31002
  type: ClusterIP
