survox/survox-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: survox-front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: survox-front
  template:
    metadata:
      labels:
        app: survox-front
    spec:
      containers:
      - name: survox-font
        image: survox6-front:6.26
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        volumeMounts:
        - name: vol-nginx-config
          mountPath: "/etc/nginx/conf.d/"
        readinessProbe:
          httpGet:
            path: /index.html
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 15
        resources:
          limits:
            memory: "32M"
            cpu: "250m"
      volumes:
      - name: vol-nginx-config
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: survox-front-service
spec:
  selector:
    app: survox-front
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      #nodePort: 31001
  type: ClusterIP
