survox/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.dev`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
#  tls:
#    certResolver: letsencrypt
